# claude-monitor

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  project.yml  setup.sh
App/: ClaudeWidgetApp.swift  Info.plist  MenuBarView.swift  UsageViewModel.swift
Shared/Models/: ProfileResponse.swift  UsageResponse.swift
Shared/Services/: APIClient.swift  KeychainReader.swift  NotificationService.swift  SharedStore.swift  StatsService.swift  UsageFormatting.swift
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  commands.rs  keychain.rs  lib.rs  notify.rs  stats.rs  store.rs  types.rs
src/lib/: ErrorBanner.svelte  GaugeRow.svelte  ProfileHeader.svelte  StatsTile.svelte  format.ts  types.ts
src/routes/: +page.svelte
