[package]
name = "claude-monitor"
version = "0.1.0"
description = "Menu bar monitor for Claude usage limits"
authors = ["Akshat Gupta"]
edition = "2021"

[lib]
name = "claude_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
walkdir = "2"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
